--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         placeholder="Password..."
       />
       <button class="btn" onclick="login()">Login In</button>
-      <button class="btn" onclick="back()">Register</button>
+      <button class="btn" onclick="back()">Sing In</button>
     </div>
     <script src="script.js"></script>
   </body>
